<resources>
    <string name="app_name">Fluffer</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map </string>
    <string name="title_add_new">Add new</string>
    <string name="title_settings">Settings</string>
    <string name="login_email">Login or Email</string>
    <string name="tip_password">Password</string>
    <string name="title_login">Sign In</string>
    <string name="button_login">Sign In</string>
    <string name="registration">Sign Up</string>\
    <string name="network_error">Network Error</string>
    <string name="tip_login">Login</string>
    <string name="tip_email">Email</string>
    <string name="tip_password_again">Password Again</string>
    <string name="back_login">Back to Sign In</string>
    <string name="nsame_password">Passwords are not the same</string>
    <string name="continuee">Continue</string>
    <string name="log_out">Sign Out</string>
    <string name="clr_logged">Clear logged</string>
    <string name="choose_image">Choose Image</string>
    <string name="add_action_button">Add action</string>
    <string name="title">Title</string>
    <string name="only_registered_events">Only registered users can add events</string>
    <string name="cancel">Cancel</string>
    <string name="intern_trouble">Some troubles with uploading... \nCheck your Internet connection</string>
    <string name="wait_loading">Loading. Please wait...</string>
    <string name="account_banned">"Your account is banned"</string>
    <string name="home">Home</string>
    <string name="new_">new</string>
    <string name="logged_in">You were logged in</string>
    <string name="wrong_pass">Wrong password</string>
    <string name="not_registered">You are not registered</string>
    <string name="something_wrong">Something went wrong... try again</string>
    <string name="y_wer_registr">You were registered.. Please, log in </string>
    <string name="occupied_login">This login is used by other user</string>
    <string name="occupied_email">This email is used by other user</string>
    <string name="only_registered_like_posts">Only registered users can like posts</string>
    <string name="only_registered_dslike_posts">Only registered users can dislike posts</string>
    <string name="show_descr">show description</string>

    <string name="forgot_password"><b>Forgot password?</b></string>
    <string name="new_password">New Password</string>

    <string name="reg_wrong_log">Login must be more then 3 symbols!</string>
    <string name="reg_wrong_email">Input correct email!</string>
    <string name="reg_wrong_pass">Passwords should be more then 5 symbols!</string>
    <string name="message_was_sent">Messsage was sent to your email</string>

    <string name="change_pass">change pass</string>
    <string name="contuct_us">Contact us</string>
    <string name="input_text">Input text</string>
    <string name="send">send</string>
    <string name="msg_send_sucs">Message send successfully!</string>
    <string name="short_msg">Message must be more then 8 simbols!</string>

    <string name="forget_email">Enter you accounts e-mail</string>
    <string name="forget_password">Enter new password</string>

    <string-array name="typelist">
        <item>Type of action</item>
        <item>Food</item>
        <item>Sales</item>
        <item>Street Art</item>
    </string-array>

    <string name="set_type">Please, input type of your action!</string>
    <string name="set_title">Please, input title of your action!</string>
    <string name="set_image">Please, select image for your action!</string>
    <string name="set_desc">Please, input description for your action!</string>
    <string name="set_place">Please, choose place for your action!</string>


    <string name="input_login">Please, input login!</string>
    <string name="input_password">Please, input title!</string>

    <string name="add_desc">Add description for you action here...</string>
    <string name="place_where">Where is your action?</string>
    <string name="ago_h">h. ago</string>
    <string name="ago_m">m. ago</string>

    <string name="key_api">AIzaSyCtuADK2UwtLUfXWe1bgby1_uq-7vSQ-Jc</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_for_new_action">Map</string>
    <string name="title_activity_map_for_action">Map</string>
    <string name="change_city">Change city</string>

    <string-array name="cities">
        <item>Brest</item>
        <item>Minsk</item>
        <item>Moscow</item>
        <item>Saint-Petersburg</item>
        <item>Warszawa</item>
    </string-array>
    <string name="your_city">Your city ...</string>




</resources>
