<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context="bigbottleapps.fluffer.Fragments.RegisterOrLogInActivityFragments.RegistrationFragment"
    android:background="#555555">

    <EditText
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#bbb"
        android:hint="@string/tip_login"
        android:padding="16dp"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/loginET" />
    <EditText
        android:layout_marginTop="160dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#bbb"
        android:hint="@string/tip_email"
        android:padding="16dp"
        android:textSize="20dp"
        android:inputType="textEmailAddress"
        android:id="@+id/emailET"
        />
    <EditText
        android:layout_marginTop="240dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#bbb"
        android:hint="@string/tip_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="20dp"
        android:id="@+id/passwordET"
        />
    <EditText
        android:layout_marginTop="320dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#bbb"
        android:hint="@string/tip_password_again"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="20dp"
        android:id="@+id/passwordagainET"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:textColor="#eeeeee"
        android:text="@string/registration" />

    <Button
        android:id="@+id/continueB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuee"
        android:paddingRight="16dp"
        android:enabled="false"
        android:background="#555"
        android:textColor="#ff6c22"
        android:textSize="20dp"
        android:layout_marginBottom="14dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/logInB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_login"
        android:paddingRight="16dp"
        android:background="#555"
        android:textColor="@color/blue"
        android:textSize="20dp"

        android:layout_alignBaseline="@+id/continueB"
        android:layout_alignBottom="@+id/continueB"
        android:layout_alignStart="@+id/wrongTW" />
    <TextView
        android:id="@+id/wrongTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/passwordagainET"
        android:layout_marginStart="23dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:textColor="@color/red_wrong"
        android:text="@string/nsame_password" />
</RelativeLayout>
