<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context="bigbottleapps.fluffer.Fragments.RegisterOrLogInActivityFragments.LogInFragment"
    android:background="#555555">

    <EditText
        android:layout_marginTop="160dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#bbb"
        android:hint="@string/login_email"
        android:padding="16dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:id="@+id/loginoremailET"
        />
    <EditText
        android:layout_marginTop="240dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#bbb"
        android:hint="@string/tip_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="20sp"
        android:id="@+id/passwordET2"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#eeeeee"
        android:text="@string/title_login"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/logB"
        android:layout_marginTop="52dp" />

    <Button
        android:id="@+id/logB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:paddingRight="16dp"
        android:background="#555"
        android:textColor="#ff6c22"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/regB"
        android:layout_alignBottom="@+id/regB"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/regB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/passwordET2"
        android:background="#555"
        android:textSize="20sp"
        android:paddingLeft="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:text="@string/registration" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:textColor="#0ff"
        android:layout_below="@+id/regB"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />
</RelativeLayout>
